# ptk-blinkfix

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_prompt.py  custom_style.py  hotkey_switch.py
ptk-blinkfix/: blink_fix.py
ptk_blinkfix/: __init__.py
ptk_blinkfix.egg-info/: PKG-INFO
