[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptk-blinkfix"
version = "1.0.0"
description = "Blinking cursor fix for Python prompt_toolkit apps"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Ahmet Altin", email = "me@ahmetaltin.com" }
]
keywords = ["prompt_toolkit", "cursor", "blinking", "terminal", "cli"]
dependencies = [
    "prompt_toolkit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/ahmetaltin/ptk-blinkfix"
Repository = "https://github.com/ahmetaltin/ptk-blinkfix"
Issues = "https://github.com/ahmetaltin/ptk-blinkfix/issues"
